# esp32c3-hlk-ld6002B-3d-human-presence-sensor

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
docs/: configuration-interface.md  hlk-ld6002-datasheet.md  hlk-ld6002c-datasheet.md  product-overview.md  sensor-configuration.md  tinyframe-protocol.md  troubleshooting.md
main/: idf_component.yml
src/: CMakeLists.txt  api.c  api.h  hlk_ld6002.c  hlk_ld6002.h  idf_component.yml  main.c  target_tracker.c  target_tracker.h  web_server.c  web_server.h  webapp.css  webapp.html  webapp.js  wifi_credentials.h.example  wifi_manager.c  wifi_manager.h
tools/: build_webapp.py  requirements.txt
